# DSS770-470_Final_Project_Agentic_AI

./: .gitignore  README.md  project_information.md  prompt_enginnering_fails.txt  requirements.txt
examples_from_class/pyPromptEngg/: .gitignore  README.md  pyproject.toml
examples_from_class/pyPromptEngg/data/: prompt.txt  responses.csv  sentiment_analysis_prompt.txt
examples_from_class/pyPromptEngg/examples/: bot2bot_chat.py  math_tutor_bot.py  ner_extraction.py  prompt_hijacking.py  text_correction.py
examples_from_class/pyPromptEngg/lessons/00_Templates/: 00_template_basic.ipynb  01_template_advanced.ipynb
examples_from_class/pyPromptEngg/lessons/01_Foundations/: 01_chatgpt_intro.ipynb  01_chatgpt_parameters.ipynb  01_gemini_intro.ipynb  02_five_principles.ipynb  03_text_applications.ipynb
examples_from_class/pyPromptEngg/lessons/02_Prompt_Engineering_Techniques/: 01_chain_of_thought.ipynb  02_automatic_prompt_engineering.ipynb  03_prompt_optimization.ipynb  04_advanced_list_gen.ipynb  05_emotion_prompting.ipynb  06_personas-othought.ipynb
examples_from_class/pyPromptEngg/lessons/03_Security_and_Safety/: 01_prompt_injection.ipynb
examples_from_class/pyPromptEngg/prompts/: prompt_helper_functions.py  prompt_react_agent.py  prompts_text_usecases.py
examples_from_class/pyPromptEngg/src/: b2b_chat.py  current_weather.py  fnHelpers.py  fnPrompts.py  fnUtils.py  gemini.py  geminiChatBot.py  geminiFunc.py  genAIClient.py  openai_client.py  simpleChatBot_chatgpt.py  simpleChatBot_genai.py  y.py
examples_from_class/pyPromptEngg/utils/: file_ops.py
(+57 files in other folders)
